Transition applictaion to money counter

--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <header></header>
     <section>
       <div class="la-all-elements">
-        <div class="la-title">Shopping List</div>
+        <img src="Images/Money.jpg" />
+        <div class="la-title">Money Counter</div>
         <div class="la-input-container">
-          <input type="text" class="la-shopping-list-input" />
-          <button class="la-button">Add to the List</button>
+          <input type="text" class="la-task-list-input" />
+          <button class="la-button">Add Task</button>
+          <input type="text" class="la-salary-input" />
+          <button class="la-button">Add Salary</button>
         </div>
         <div class="la-warning-message"></div>
       </div>
